@@ -56,7 +56,7 @@ $Date$
 <!ENTITY lfs-vim-version              "7.3">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20111206">
+<!ENTITY blfs-bootscripts-version     "20111212">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -801,7 +801,7 @@ $Date$
 
 <!-- Part XII -->
 <!-- Chapter 38 -->
-<!ENTITY alsa-version                 "1.0.21">
+<!ENTITY alsa-version                 "1.0.24.1">
 <!ENTITY alsa-lib-version             "&alsa-version;">
 <!ENTITY alsa-plugins-version         "&alsa-version;">
 <!ENTITY alsa-utils-version           "&alsa-version;">
@@ -810,7 +810,7 @@ $Date$
 <!ENTITY alsa-oss-version             "1.0.17">
 <!ENTITY alsa-download-http           "http://gd.tuwien.ac.at/opsys/linux/alsa">
 <!ENTITY alsa-download-ftp            "ftp://ftp.alsa-project.org/pub">
-<!ENTITY audiofile-version            "0.2.7">
+<!ENTITY audiofile-version            "0.3.2">
 <!ENTITY esound-version               "0.2.41">
 <!ENTITY sdl-version                  "1.2.14">
 <!ENTITY libao-version                "0.8.8">
