@@ -45,7 +45,13 @@
       <para>December 12th, 2011</para>
       <itemizedlist>
         <listitem>
-          <para>[abenton] - Updated Webkitgtk to 1.6.1.</para>
+          <para>[bdubbs] - Updated to audiofile-0.3.2.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Updated to alsa-lib-1.0.24.1.</para>
+        </listitem>
+        <listitem>
+          <para>[abenton] - Updated to Webkitgtk to 1.6.1.</para>
         </listitem>
       </itemizedlist>
     </listitem>
